# Thesis

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: pylint.yml
cbt/: gamemanager.py  main.py  player.py
cbt/algorithms/: CBT1.py  CBT2.py  MCTS.py  cbt_alg.py  minimal_CBT.py  minimal_UCB.py
cbt/games/: minimal.py  tictactoe.py
src/: AlphaZero.py  ISMCTS.py  ISMCTSplayer.py  game.py  gamemanager.py  gameplayer.py  humanplayer.py  klaverjas.py  main.py  neuralnetwork.py  player.py
src/algorithms/: CBT.py  CBT1.py  ISMCTS.py  MCTS.py  minimal_CBT.py
src/algorithms/ISMCTS/: ISMCTS.py  determinization.py
src/algorithms/bandits/: UCB1.py  UCB2.py  bandit.py
src/games/: minimal.py  tictactoe.py
src/games/klaverjas/: ISMCTSplayer.py  definitions.py  gamestate.py  humanplayer.py  klaverjas.py  klaverjasplayer.py
tst/: ISMCTS_test.py  game_test.py  klaverjas_test.py  player_test.py
