[project]
name = "cbt"
version = "0.1.0"
description = "Code and experiments for Bachelor thesis in Computer Science and Mathematics"
requires-python = ">= 3.13"
readme = "README.md"
authors = [
    {name = "Daan de Jong", email= "daanvulkaan@gmail.com"},
]
dependencies = [
    "numpy == 2.1.3"
]

[dependency-groups]
test = [
    "pylint == 3.3.6"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.pylint]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "fixme",
    "invalid-name",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-positional-arguments",
    "duplicate-code",
]
